# pytest-Selenium-pet-project

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  urls.py
baseclasses/: base_page.py
data/: data_generator_factories.py  data_generators.py  dataclasses.py  object_generators.py
data/dataclasses/: global_dc.py
locators/: elements_page.py  registration_form_page.py
pages/: elements_page.py  registration_form_page.py
tests/: elements_page_test.py  registration_form_page.py
