[tool.poetry]
name = "demoqa-selenium"
version = "0.1.0"
description = ""
authors = ["Vlad Smek <smek1negithub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
