[tool.poetry]
name = "demoqa-selenium"
version = "0.1.0"
description = ""
authors = ["Vlad Smek <smek1negithub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
faker = "^24.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
